--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     -->
     <footer>
     	<p class="copyright text-muted">
-        Copyright <a href="https://muniz95.github.io/">Rodrigo Muniz</a>
+        Copyright <a target="_blank" href="https://muniz95.github.io/">Rodrigo Muniz</a>
         <br><br>
         <iframe
           style="margin-left: 2px; margin-bottom:-5px;"
